Fix header collision with carousel on mobile

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -34,6 +34,8 @@
   }
 
   .nav-menu {
+    z-index: 100;
+
     ul {
       display: flex;
       padding: 0;
